--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   },
